eric-oss-porter-service/templates/communication-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: communication-networkpolicy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: eric-oss-porter-communications
  policyTypes:
  - Ingress
  ingress:
    - {}
