eric-oss-porter-service/templates/offerings-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: offerings-networkpolicy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: eric-oss-porter-restsimofferings
  policyTypes:
  - Ingress
  ingress:
    - {}
