eric-oss-porter-service/templates/usermanagement-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: usermanagement-networkpolicy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: eric-oss-porter-usermanagement
  policyTypes:
  - Ingress
  ingress:
    - {}
